--- a/Project.ipynb
+++ b/Project.ipynb
@@ -1330,18 +1330,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[82], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(cluster_size):\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(cluster_size):\n\u001b[1;32m---> 14\u001b[0m         vec_i \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_scaled\u001b[49m\u001b[43m[\u001b[49m\u001b[43mcluster_docs_index\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfloat32\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     15\u001b[0m         vec_j \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(X_scaled[cluster_docs_index[j]], dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32)\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     17\u001b[0m         similarity_matrix[i][j] \u001b[38;5;241m=\u001b[39m F\u001b[38;5;241m.\u001b[39mcosine_similarity(vec_i, vec_j)\u001b[38;5;241m.\u001b[39mitem()\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster 0: Average Cosine Similarity = 0.2471\n",
+      "Cluster 1: Average Cosine Similarity = 0.8698\n",
+      "Cluster 2: Average Cosine Similarity = 0.7759\n",
+      "Cluster 3: Average Cosine Similarity = 0.6849\n"
      ]
     }
    ],
@@ -1380,9 +1379,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster 0: Average Cosine Similarity = 0.6313\n",
+      "Cluster 1: Average Cosine Similarity = 0.8727\n",
+      "Cluster 2: Average Cosine Similarity = 0.2941\n",
+      "Cluster 3: Average Cosine Similarity = 0.7847\n",
+      "Cluster 4: Average Cosine Similarity = nan\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Susana\\AppData\\Local\\Temp\\ipykernel_19924\\2282083104.py:19: RuntimeWarning: Mean of empty slice.\n",
+      "  avg_similarity = similarity_matrix[np.triu_indices(cluster_size, k=1)].mean()\n",
+      "c:\\Users\\Susana\\anaconda3\\envs\\aa1\\lib\\site-packages\\numpy\\core\\_methods.py:129: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ret = ret.dtype.type(ret / rcount)\n"
+     ]
+    }
+   ],
    "source": [
     "X = np.array(df['vectorSeqN'].tolist())\n",
     "X_scaled = StandardScaler().fit_transform(X)\n",
