--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,29 @@
     "import torch\n",
     "import torch.nn.functional as F\n",
     "from encoder.encoder_factory import EncoderFactory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.6585])\n"
+     ]
+    }
+   ],
+   "source": [
+    "v1 =  [1.33, 0.66]\n",
+    "v2 = [0, 2]\n",
+    "v3 =  [1.6, 1.4]\n",
+    "\n",
+    "similitud_coseno = F.cosine_similarity(torch.tensor(v2).unsqueeze(0), torch.tensor(v3).unsqueeze(0))\n",
+    "print(similitud_coseno)\n",
+    "\n"
    ]
   },
   {
