--- a/Project.ipynb
+++ b/Project.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Protein Clustering and Classification"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -22,33 +29,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([0.6585])\n"
-     ]
-    }
-   ],
    "source": [
-    "v1 =  [1.33, 0.66]\n",
-    "v2 = [0, 2]\n",
-    "v3 =  [1.6, 1.4]\n",
-    "\n",
-    "similitud_coseno = F.cosine_similarity(torch.tensor(v2).unsqueeze(0), torch.tensor(v3).unsqueeze(0))\n",
-    "print(similitud_coseno)\n",
-    "\n"
+    "### 1. Collect and write data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Collect and write data"
+    "As a first step, we collect protein data directly from ncbi API. After the sequences have been retrieved, we write them to a file."
    ]
   },
   {
@@ -87,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 Get data"
+    "We can now express the sequences as a unique dataframe, where each row is a protein sequence."
    ]
   },
   {
@@ -184,6 +175,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We save the dataframe to a file for future use, in case we need to restart the kernel or use it in another context."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -197,6 +195,26 @@
    "metadata": {},
    "source": [
     "### 2.1. Encoding the data with a variation of bag of words"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to train models to classify proteins, we need to encode the sequences in a way that can be used by the models themselves. We will use a variation of the Bag of Words (BoW), where we will count the number of times each amino acid appears in the sequence.\n",
+    "\n",
+    "Why are we inspired by the bag of words approach? Because it is a simple and effective way to encode text data, and we can use it as a starting point to encode the protein sequences. As mentioned in the README, we will use two slightly different variations that try to capture positional information in the sequences. This approaches are the following:\n",
+    "\n",
+    "- **Fixed length encoding (vectorMaxN)**: to create protein embeddings, we will use a fixed length encoding according two BOW methods. However, this variation suposse a maximum number of aminoacids in the sequence, given by the largest sequence in the dataset. This method tries to give a general representation of the protein sequences, so that the weight of an amino acid is the same for each sequence as long as it appears on the same position.\n",
+    "\n",
+    "- **Relative length encoding (vectorSeqN)**: instead of using a fixed length encoding, we will use a relative length encoding. This means that we will use the length of the sequence as a reference to encode the amino acids. This way, the weight of an amino acid will be different depending on the length of the sequence. This method tries to give a more specific representation of the protein sequences, rating each position of the sequence according to the length of it, so that small will not be overshadowed by large sequences."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We try both representations to see which one works best for the classification task."
    ]
   },
   {
@@ -315,6 +333,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "One can appreciate that the fixed length encoding tends to express vectors with higher values, while the relative length encoding tends to express vectors with lower values to the same positions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3. Unsupervised Learning"
    ]
   },
@@ -323,6 +348,13 @@
    "metadata": {},
    "source": [
     "### 3.1. DBSCAN with vectorMaxN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now try to cluster the proteins using the DBSCAN algorithm. We will use the fixed length encoding to represent the sequences."
    ]
   },
   {
@@ -363,6 +395,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following clusters were obtained:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -400,6 +439,13 @@
    "metadata": {},
    "source": [
     "#### 3.1.1 Principal Component Analysis (PCA)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we show the representation of the clusters in a 2D space, making a principal component analysis (PCA), we hace the following plot:"
    ]
   },
   {
@@ -551,7 +597,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Like this, clusters do not seem to be totally well design, but this could be just a consequence of the PCA projection. Would the outcome be different if we had used the other embedding?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3.2. DBSCAN with vectorSeqN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the next chunk, we will use the relative length encoding to represent the sequences and cluster them using the DBSCAN algorithm."
    ]
   },
   {
@@ -589,6 +649,13 @@
     "dbscan_best = DBSCAN(eps=best_eps, min_samples=best_min_samples)\n",
     "clusters_best = dbscan_best.fit_predict(X_scaled)\n",
     "df['cluster-vectorSeqN'] = clusters_best"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following clusters were obtained:"
    ]
   },
   {
@@ -782,6 +849,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The result obtained are pretty similar to the previous ones. We try now to use the K-means algorithm to see if we can get a better clustering."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3.3. K-means with vectorMaxN"
    ]
   },
@@ -920,6 +994,13 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we start seeing a better clustering. The clusters are more defined and the PCA projection shows a better separation between them."
    ]
   },
   {
@@ -1140,6 +1221,13 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similar results are obtained for this embedding."
    ]
   },
   {
@@ -1433,6 +1521,13 @@
    "metadata": {},
    "source": [
     "## 5. Accessing our API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As a result, we have designed an API that allows us to cluster protein sequences using your own parameters. Here're some examples of how to use it:"
    ]
   },
   {
